RESOLVED FIXED188142
[Wi-Fi Assertions] Pass a ResumptionReason to resumeWiFiAssertions
https://bugs.webkit.org/show_bug.cgi?id=188142
Summary [Wi-Fi Assertions] Pass a ResumptionReason to resumeWiFiAssertions
Andy Estes
Reported 2018-07-28 21:50:47 PDT
[Wi-Fi Assertions] Pass a ResumptionReason to resumeWiFiAssertions
Attachments
Patch (2.24 KB, patch)
2018-07-28 21:57 PDT, Andy Estes
no flags
Archive of layout-test-results from ews205 for win-future (13.14 MB, application/zip)
2018-07-29 01:29 PDT, EWS Watchlist
no flags
Andy Estes
Comment 1 2018-07-28 21:51:30 PDT
Andy Estes
Comment 2 2018-07-28 21:57:12 PDT
EWS Watchlist
Comment 3 2018-07-29 01:29:37 PDT
Comment on attachment 346011 [details] Patch Attachment 346011 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8688996 New failing tests: imported/blink/transitions/unprefixed-transform.html legacy-animation-engine/imported/blink/transitions/unprefixed-transform.html
EWS Watchlist
Comment 4 2018-07-29 01:29:49 PDT
Created attachment 346019 [details] Archive of layout-test-results from ews205 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews205 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Andy Estes
Comment 5 2018-07-29 15:14:01 PDT
Note You need to log in before you can comment on or make changes to this bug.