Cherry-pick r234349. rdar://problem/42721129

[Wi-Fi Assertions] Pass a ResumptionReason to resumeWiFiAssertions
    https://bugs.webkit.org/show_bug.cgi?id=188142
    <rdar://problem/42628842>

    Reviewed by Darin Adler.

    * NetworkProcess/cocoa/NetworkProcessCocoa.mm:
    (WebKit::NetworkProcess::platformProcessDidResume):
    (WebKit::NetworkProcess::platformProcessDidTransitionToForeground):

    Canonical link: https://commits.webkit.org/203268@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234349 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/202900.115@safari-606-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-606-branch@234358 268f45cc-cd09-0410-ab3c-d52691b4dbfc